i can't even remember

--- a/app/views/admin/factions/_form.html.erb
+++ b/app/views/admin/factions/_form.html.erb
@@ -18,8 +18,8 @@
   <div class="form-group">
     <%= f.label :icon_style, "Icon class name", class: "sr-only" %>
     <div class="input-group">
-      <span class="input-group-addon">nr-</span>
-      <%= f.text_field :icon_style, placeholder: "icon-class", class: "form-control" %>
+      <span class="input-group-addon">icon-</span>
+      <%= f.text_field :icon_style, placeholder: "factioncode", class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
