--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -8,7 +8,6 @@
           <%= f.label :email, "Email address", class: "col-md-4 control-label" %>
           <div class="col-md-8">
             <%= f.text_field :email, class: "form-control" %>
-            <small class="help-block">This will be used to fetch your <%= link_to "Gravatar", "https://en.gravatar.com/", target: "_blank" %> profile image</small>
           </div>
         </div>
         <div class="form-group">
@@ -18,7 +17,14 @@
           </div>
         </div>
         <div class="form-group">
-          <%= f.label :jinteki_username, "Jinteki Username", class: "col-md-4 control-label" %>
+          <%= f.label :about_markdown, "About me", class: "col-md-4 control-label" %>
+          <div class="col-md-8">
+            <%= f.text_area :about_markdown, class: "form-control", rows:5, maxlength:200 %>
+            <small class="help-block">Accepts <%= link_to "markdown", "#" %>. Maximum 200 characters</small>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :jinteki_username, "Jinteki.net Username", class: "col-md-4 control-label" %>
           <div class="col-md-8">
             <%= f.text_field :jinteki_username, class: "form-control", placeholder: "Optional" %>
           </div>
@@ -32,7 +38,7 @@
       <% end %>
 
 
-      <h2>Notification preferences</h2>
+      <h2 id="notifications">Notification preferences</h2>
       <%= form_for @user, url: update_notifications_profile_path, html: { class: "form-horizontal" } do |f| %>
         <h3>Game results</h3>
         <div class="form-group">
@@ -86,7 +92,7 @@
     </div>
 
     <div class="col-md-6">
-      <h2>Update password</h2>
+      <h2 id="password">Update password</h2>
       <%= form_tag update_password_profile_path, class: "form-horizontal" do |f| %>
         <div class="form-group">
           <%= label_tag :current_password, "Current password", class: "control-label col-md-4" %>
