--- a/app/views/seasons/_league_seasons.html.erb
+++ b/app/views/seasons/_league_seasons.html.erb
@@ -22,7 +22,7 @@
             <%= link_to "Set active", activate_league_season_path(league.id,season.id), class: "btn btn-xs btn-default" if season.may_activate? %>
             <%= link_to "Close", "#close", class:"btn btn-xs btn-warning" if season.may_close? %>
             <%= link_to "Export", "#download", class:"btn btn-xs btn-info" unless season.upcoming? %>
-            <%= link_to "Delete", "javascript:void(0);", "data-href":league_season_path(league.id,season.id), "data-action": :delete, class:"btn btn-xs btn-danger" if season.closed? %>
+            <%= delete_button league_season_path(league.id,season.id),"season","Delete" if season.closed? %>
           </td>
         </tr>
       <% end %>
