--- a/app/views/games/update.html.erb
+++ b/app/views/games/update.html.erb
@@ -1,3 +1,3 @@
 <script type="text/javascript">
-  parent.closeGameResultModal();
+setTimeout(function(){ parent.closeGameResultModal(); },3000);
 </script>
