--- a/app/views/leagues/edit.html.erb
+++ b/app/views/leagues/edit.html.erb
@@ -23,67 +23,10 @@
     <%= render partial: "seasons/league_seasons", locals: { league: @league, current_season_id: @current_season_id } %>
 
 
-    <h3>Users</h3>
+    <h3>Members</h3>
+    <%= render partial: "leagues/invite_member", locals: { league: @league } %>
 
-    <%= form_tag league_invite_path(@league.id), class: "form-horizontal" do %>
-      <div class="form-group">
-        <div class="col-md-12">
-          <%= label_tag :email, "Email address", class: "sr-only" %>
-          <div class="input-group">
-            <%= text_field_tag :email, "", placeholder: "Invite by email address", class: "form-control" %>
-            <span class="input-group-btn"><%= submit_tag "Send invitation", class: "btn btn-success" %></span>
-          </div>
-        </div>
-      </div>
-    <% end %>
-
-    <div class="table-responsive">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th></th>
-            <th></th|>
-          </tr>
-        </thead>
-        <tbody>
-          <% @members.each do |player| %>
-            <% role = player.owner? ? "Owner" : (player.officer ? "Officer" : "Member") %>
-            <tr class="<%= league_role_row_style(role) %>">
-              <td>
-                <% if player.approved? %>
-                  <%= link_to player.display_name, show_profile_path(player.user_id,player.user.slug) %>
-                  <%= league_member(@league,player.user) %>
-                <% else %>
-                  <%= player.invitation_token %>
-                <% end %>
-              </td>
-              <td>
-                <% if player.invited? %>
-                  <em>Invitation pending</em>
-                <% elsif player.requested? %>
-                  <em>Request pending</em>
-                <% end %>
-              </td>
-              <td class="text-right">
-                <% unless player.user == current_user %>
-                  <%= link_to "Accept", approve_league_join_path(@league.id,player.id), class: "btn btn-success btn-xs" if player.may_approve? %>
-                  <%= link_to "Promote", league_promote_member_path(@league.id,player.id), class: "btn btn-default btn-xs" if player.may_promote? %>
-                  <%= link_to "Demote", league_demote_member_path(@league.id,player.id), class: "btn btn-default btn-xs" if player.may_demote? %>
-                  <%= link_to "Ban", league_ban_member_path(@league.id,player.id), class: "btn btn-danger btn-xs" if player.may_ban? %>
-                  <%= delete_button league_join_path(@league.id,player.id),"membership","Remove" unless player.approved? %>
-                <% else %>
-                  <em>This is you</em>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    <% if @league.liga_users.banned.any? %>
-      <p><%= link_to "View #{pluralize @league.liga_users.banned.count,"banned user"}", league_banned_members_path(@league.id) %></p>
-    <% end %>
+    <%= render partial: "leagues/members", locals: { members: @members } %>
     <p class="text-right"><%= link_to '<i class="fa fa-envelope"></i> Send a Broadcast'.html_safe, broadcast_league_path(@league.id), class: "btn btn-primary" %></p>
   </div>
 </div>
