rework league user display; allow users to remove themselves from a league; delete cancelled and unplayed games when a LigaUser is deleted; reworked a whole bunch of LigaUserController routes to use member instead of join/user/invite for consistency

--- a/app/views/games/_table_row.html.erb
+++ b/app/views/games/_table_row.html.erb
@@ -22,6 +22,8 @@
             <% else %>
               <em>Upcoming</em>
             <% end %>
+          <% elsif game.cancelled? %>
+            <em>Cancelled</em>
           <% else %>
             <%= game.result.display_name %>
           <% end %>
