--- a/app/views/league_mailer/invite.html.erb
+++ b/app/views/league_mailer/invite.html.erb
@@ -2,4 +2,4 @@
 
 <p>You have been invited to join <strong><%= @league.display_name %></strong></p>
 
-<p><%= link_to "Click here", league_view_invite_url(@league.id,@token) %> to view this invitation.</p>
+<p><%= link_to "Click here", view_invite_league_members_url(@league.id,@token) %> to view this invitation.</p>
