--- a/app/views/leagues/_invite_member.html.erb
+++ b/app/views/leagues/_invite_member.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag league_invite_path(league.id), class: "form-horizontal" do %>
+<%= form_tag invite_league_members_path(league.id), class: "form-horizontal" do %>
   <div class="form-group">
     <div class="col-md-12">
       <%= label_tag :email, "Email address", class: "sr-only" %>
