--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -19,13 +19,17 @@
 
 <% unless @member %>
   <% unless @league.invitational? %>
-    <%= form_tag league_join_index_path(@league.id), style:"display:inline;" do %><%= submit_tag (@league.closed? ? "Request to join this league" : "Join this league"), class: "btn btn-success btn-sm" %><% end %>
+    <%= form_tag league_members_path(@league.id), style:"display:inline;" do %><%= submit_tag (@league.closed? ? "Request to join this league" : "Join this league"), class: "btn btn-success btn-sm" %><% end %>
   <% else %>
     <button class="btn btn-default disabled btn-sm">This league is invitation-only</button>
   <% end %>
 <% else %>
   <% unless current_user == @league.owner %>
-    <%= form_tag league_join_path(@league.id,@member.id), method: :delete, style:"display:inline;" do %><%= submit_tag "Leave this league", class: "btn btn-danger btn-sm", confirmation: "Are you sure you want to leave this league?" %><% end %>
+    <% if @member.requested? %>
+      <%= form_tag league_member_path(@league.id,@member.id), method: :delete, style:"display:inline;" do %><%= submit_tag "Cancel request", class: "btn btn-danger btn-sm", confirmation: "Are you sure you don't want to join this league?" %><% end %>
+    <% else %>
+      <%= form_tag league_member_path(@league.id,@member.id), method: :delete, style:"display:inline;" do %><%= submit_tag "Leave this league", class: "btn btn-danger btn-sm", confirmation: "Are you sure you want to leave this league?" %><% end %>
+    <% end %>
   <% else %>
     <button class="btn btn-danger btn-sm disabled">Cannot leave an owned league</button>
   <% end %>
