account activation process; change login/register/password reset forms to not user NRDB layout panels; admin user list; start work on user ban/deletion processes; send email to reporter on flag response

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,5 @@
 <ul class="breadcrumb">
-  <li class="active">Admin Panel</li>
+  <li class="active">Admin</li>
 </ul>
 
 <h1>Admin Panel</h1>
@@ -15,7 +15,7 @@
       <%= submit_tag "Search", class: "btn btn-success" %>
     <% end %>
     <ul class="list-unstyled">
-      <li><%= link_to "Browse", "#" %></li>
+      <li><%= link_to "Browse", admin_users_path %></li>
       <li><%= link_to "Bans", "#" %></li>
       <li><%= link_to "Admins", "#" %></li>
     </ul>
