--- a/app/views/password_reset/edit.html.erb
+++ b/app/views/password_reset/edit.html.erb
@@ -1,28 +1,24 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <div class="panel panel-default">
-      <div class="panel-heading">Choose a new password</div>
-      <div class="panel-body">
-        <%= form_for @user, url: password_reset_path(@token), html: { class:"form-horizontal" } do |f| %>
-          <div class="form-group">
-            <%= label_tag :password, "New password", class: "col-md-4 control-label" %>
-            <div class="col-md-8">
-              <%= f.password_field :password, class: "form-control" %>
-            </div>
-          </div>
-          <div class="form-group">
-            <%= label_tag :password_confirmation, "Confirm password", class: "col-md-4 control-label" %>
-            <div class="col-md-8">
-              <%= f.password_field :password_confirmation, class: "form-control" %>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-md-8 col-md-offset-4">
-              <%= submit_tag "Reset", class: "btn btn-success" %>
-            </div>
-          </div>
-        <% end %>
+    <h1>Choose a new password</h1>
+    <%= form_for @user, url: password_reset_path(@token), html: { class:"form-horizontal" } do |f| %>
+      <div class="form-group">
+        <%= label_tag :password, "New password", class: "col-md-4 control-label" %>
+        <div class="col-md-8">
+          <%= f.password_field :password, class: "form-control" %>
+        </div>
       </div>
-    </div>
+      <div class="form-group">
+        <%= label_tag :password_confirmation, "Confirm password", class: "col-md-4 control-label" %>
+        <div class="col-md-8">
+          <%= f.password_field :password_confirmation, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-md-8 col-md-offset-4">
+          <%= submit_tag "Reset", class: "btn btn-success" %>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
