--- a/app/views/password_reset/new.html.erb
+++ b/app/views/password_reset/new.html.erb
@@ -1,23 +1,18 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <div class="panel panel-default">
-      <div class="panel-heading">Reset password</div>
-      <div class="panel-body">
-        <%= form_tag password_reset_index_path, class:"form-horizontal" do %>
-          <div class="form-group">
-            <%= label_tag :email, "Email", class: "col-md-4 control-label" %>
-            <div class="col-md-8">
-              <%= text_field_tag :email, "", placeholder: "", class: "form-control" %>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-md-8 col-md-offset-4">
-              <%= submit_tag "Reset", class: "btn btn-success" %>
-            </div>
-          </div>
-        <% end %>
+    <h1>Reset password</h1>
+    <%= form_tag password_reset_index_path, class:"form-horizontal" do %>
+      <div class="form-group">
+        <%= label_tag :email, "Email", class: "col-md-4 control-label" %>
+        <div class="col-md-8">
+          <%= text_field_tag :email, "", placeholder: "", class: "form-control" %>
+        </div>
       </div>
-    </div>
+      <div class="form-group">
+        <div class="col-md-8 col-md-offset-4">
+          <%= submit_tag "Reset", class: "btn btn-success" %>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
-
