--- a/app/views/layouts/iframe.html.erb
+++ b/app/views/layouts/iframe.html.erb
@@ -10,6 +10,8 @@
     <link href='//fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Source+Serif+Pro:400,600' rel='stylesheet' type='text/css'>
 
+    <%= stylesheet_link_tag '//netrunnerdb.com/bundles/netrunnerdbbuilder/netrunnerfont.css', media: 'all' %>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body id="iframe">
